--- a/views/menu.html
+++ b/views/menu.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- TODO: TRANSFORMAR ESTE ARCHIVO EN HANDLEBAR -->
+<!-- TODO: ENLAZAR CON ARCHIVO CSS EN PUBLIC CORRESPONDIENTE-->
+<!-- TODO: ENLAZAR CON ARCHIVO JS EN PUBLIC CORRESPONDIENTE-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
