--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,131 +1,90 @@
 body {
-    font-family: 'Overpass', sans-serif;
-    font-weight: normal;
-    font-size: 100%;
-    color: #1b262c;
-    
-    margin: 0;
-    background-color: #0f4c75;
+background-color: #f2f2f2;
 }
 
-#contenedor {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    margin: 0;
-    padding: 0;
-    min-width: 100vw;
-    min-height: 100vh;
-    width: 100%;
-    height: 100%;
+.login-container {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
 }
 
-#central {
-    max-width: 320px;
-    width: 100%;
+.row {
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
 }
 
-.titulo {
-    font-size: 250%;
-    color:#bbe1fa;
-    text-align: center;
-    margin-bottom: 20px;
+@media screen and (max-width: 768px) {
+.row {
+flex-direction: column;
+}
 }
 
-#login {
-    width: 100%;
-    padding: 50px 30px;
-    background-color: #3282b8;
-    
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
-    
-    box-sizing: border-box;
+.login-card {
+background-color: #5585b5;
+border-radius: 4px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+color: #fff;
+padding: 30px;
+width: 100%;
+max-width: 400px;
+margin-bottom: 20px;
 }
 
-#login input {
-    font-family: 'Overpass', sans-serif;
-    font-size: 110%;
-    color: #1b262c;
-    
-    display: block;
-    width: 100%;
-    height: 40px;
-    
-    margin-bottom: 10px;
-    padding: 5px 5px 5px 10px;
-    
-    box-sizing: border-box;
-    
-    border: none;
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
+.login-card img {
+max-width: 100%;
+height: auto;
+margin-bottom: 20px;
 }
 
-#login input::placeholder {
-    font-family: 'Overpass', sans-serif;
-    color: #E4E4E4;
+.page-title {
+font-size: 24px;
+font-weight: bold;
+text-align: center;
+margin-bottom: 20px;
 }
 
-#login button {
-    font-family: 'Overpass', sans-serif;
-    font-size: 110%;
-    color:#1b262c;
-    width: 100%;
-    height: 40px;
-    border: none;
-    
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
-    
-    background-color: #bbe1fa;
-    
-    margin-top: 10px;
+.form {
+display: flex;
+flex-direction: column;
 }
 
-#login button:hover {
-    background-color: #0f4c75;
-    color:#bbe1fa;
+.form-group {
+margin-bottom: 20px;
 }
 
-.pie-form {
-    font-size: 90%;
-    text-align: center;    
-    margin-top: 15px;
+label {
+font-size: 16px;
+font-weight: bold;
+margin-bottom: 5px;
 }
 
-.pie-form a {
-    display: block;
-    text-decoration: none;
-    color: #bbe1fa;
-    margin-bottom: 3px;
+.form-input {
+width: 100%;
+padding: 10px;
+font-size: 16px;
+border: none;
+border-radius: 4px;
+margin-bottom: 20px;
 }
 
-.pie-form a:hover {
-    color: #0f4c75;
+.btn {
+padding: 10px 20px;
+font-size: 16px;
+font-weight: bold;
+text-transform: uppercase;
+border-radius: 4px;
+border: none;
+cursor: pointer;
 }
 
-.inferior {
-    margin-top: 10px;
-    font-size: 90%;
-    text-align: center;
+.btn-primary {
+background-color: #79c2d0;
+color: #fff;
+margin-top: 20px;
 }
 
-.inferior a {
-    display: block;
-    text-decoration: none;
-    color: #bbe1fa;
-    margin-bottom: 3px;
-}
-
-.inferior a:hover {
-    color: #3282b8;
+.btn-primary:hover {
+background-color: #53a8b6;
 }
