--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../public/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../public/css/login.css">
     <title>Burguer Base</title>
 </head>
 <body>
