--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,132 +1,73 @@
 body {
-    font-family: 'Overpass', sans-serif;
-    font-weight: normal;
-    font-size: 100%;
-    color: #1b262c;
+    background-color: #f2f2f2;
+    }
     
-    margin: 0;
-    background-color: #0f4c75;
-}
-
-#contenedor {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     
-    margin: 0;
-    padding: 0;
-    min-width: 100vw;
-    min-height: 100vh;
-    width: 100%;
-    height: 100%;
-}
 
-#central {
-    max-width: 320px;
-    width: 100%;
-}
-
-.titulo {
-    font-size: 250%;
-    color:#bbe1fa;
+    .login-card {
+        background-color: #79c2d0;
+        border-radius: 4px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        color: #fff;
+        padding: 30px;
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto 20px;
+      }
+    
+    .login-card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+    }
+    
+    .page-title {
+    font-size: 35px;
+    font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
-}
-
-#login {
+    }
+    
+    .form {
+    display: flex;
+    flex-direction: column;
+    }
+    
+    .form-group {
+    margin-bottom: 20px;
+    }
+    
+    label {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    }
+    
+    .form-input {
     width: 100%;
-    padding: 50px 30px;
-    background-color: #3282b8;
-    
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
-    
-    box-sizing: border-box;
-}
-
-#login input {
-    font-family: 'Overpass', sans-serif;
-    font-size: 110%;
-    color: #1b262c;
-    
-    display: block;
-    width: 100%;
-    height: 40px;
-    
-    margin-bottom: 10px;
-    padding: 5px 5px 5px 10px;
-    
-    box-sizing: border-box;
-    
+    padding: 10px;
+    font-size: 16px;
     border: none;
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
-}
-
-#login input::placeholder {
-    font-family: 'Overpass', sans-serif;
-    color: #E4E4E4;
-}
-
-#login button {
-    font-family: 'Overpass', sans-serif;
-    font-size: 110%;
-    color:#1b262c;
-    width: 100%;
-    height: 40px;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    }
+    
+    .btn {
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 4px;
     border: none;
+    cursor: pointer;
+    }
     
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
+    .btn-primary {
+    background-color: #5585b5;
+    color: #fff;
+    margin-top: 20px;
+    }
     
-    background-color: #bbe1fa;
-    
-    margin-top: 10px;
-}
-
-#login button:hover {
-    background-color: #0f4c75;
-    color:#bbe1fa;
-}
-
-.pie-form {
-    font-size: 90%;
-    text-align: center;    
-    margin-top: 15px;
-}
-
-.pie-form a {
-    display: block;
-    text-decoration: none;
-    color: #bbe1fa;
-    margin-bottom: 3px;
-}
-
-.pie-form a:hover {
-    color: #0f4c75;
-}
-
-.inferior {
-    margin-top: 10px;
-    font-size: 90%;
-    text-align: center;
-}
-
-.inferior a {
-    display: block;
-    text-decoration: none;
-    color: #bbe1fa;
-    margin-bottom: 3px;
-}
-
-.inferior a:hover {
-    color: #3282b8;
-}
-
+    .btn-primary:hover {
+    background-color: #53a8b6;
+    }
