--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -1,7 +1,7 @@
 <!-- Inventory graphs start here  -->
 <div id='inventory' class='inventory--dv'>
   <h2>Inventory</h2>
-  <textarea id='invGraph'></textarea>
+  <div id='chartContainer' style='height: 370px; width: 100%;'></div>
 </div>
 <!-- Inventory graphs will end here  -->
 
@@ -32,5 +32,5 @@
 </div>
 
 <!-- Menu end here -->
-
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script src='public/js/menu.js'></script>
