created log out button

--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -1,6 +1,9 @@
 <!-- Inventory graphs start here  -->
+
+<button class='btn btn-primary' id='logout'>logout</button>
 <div id='inventory' class='inventory--dv'>
   <h2>Inventory</h2>
+
   <textarea id='invGraph'></textarea>
 </div>
 <!-- Inventory graphs will end here  -->
@@ -34,3 +37,4 @@
 <!-- Menu end here -->
 
 <script src='public/js/menu.js'></script>
+<script src='public/js/logout.js'></script>
