--- a/views/order.hbs
+++ b/views/order.hbs
@@ -1,5 +1,6 @@
 <body>
   <section class="section">
+    <button class='btn btn-primary' id='logout'>logout</button>
     <div class="container">
       <h1 class="title">Order Ingredients</h1>
       <form id="order-form">
@@ -27,3 +28,4 @@
   </section>
   <script src="public/js/order.js"></script>
 </body>
+<script src='public/js/logout.js'></script>
