--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,10 +18,7 @@
     <header class="header">
         <nav class="navbar is-spaced" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="/">
-                    <img src="../public/images/logo.png" width="112" height="28">
-                </a>
-
+            
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -31,6 +28,10 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
+                    <a id="logout" class="navbar-item" href="/">
+                        Log-out
+                    </a>
+
                     <a class="navbar-item" href="/menu">
                         Menu
                     </a>
