--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,40 +1,63 @@
-<div class='row justify-space-between-md'>
-  <div class='login-card'>
-    <h2 class='page-title'>Sign in</h2>
-    <form class='form login-form'>
-      <div class='form-group'>
-        <label for='email-login'>Email:</label>
-        <input class='form-input' type='text' id='email-login' />
+<section class="section">
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <div class="box">
+            <h2 class="title">Sign in</h2>
+            <form>
+              <div class="field">
+                <label class="label" for="email-login">Email:</label>
+                <div class="control">
+                  <input class="input" type="text" id="email-login" />
+                </div>
+              </div>
+              <div class="field">
+                <label class="label" for="password-login">Password:</label>
+                <div class="control">
+                  <input class="input" type="password" id="password-login" />
+                </div>
+              </div>
+              <div class="field">
+                <div class="control">
+                  <button class="button is-primary" type="submit">Login</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="column">
+          <div class="box">
+            <h2 class="title">Create an account</h2>
+            <form>
+              <div class="field">
+                <label class="label" for="username-signup">Username:</label>
+                <div class="control">
+                  <input class="input" type="text" id="username-signup" />
+                </div>
+              </div>
+              <div class="field">
+                <label class="label" for="email-signup">Email:</label>
+                <div class="control">
+                  <input class="input" type="text" id="email-signup" />
+                </div>
+              </div>
+              <div class="field">
+                <label class="label" for="password-signup">Password:</label>
+                <div class="control">
+                  <input class="input" type="password" id="password-signup" />
+                </div>
+              </div>
+              <div class="field">
+                <div class="control">
+                  <button class="button is-primary" type="submit">Sign up</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
-      <div class='form-group'>
-        <label for='password-login'>Password:</label>
-        <input class='form-input' type='password' id='password-login' />
-      </div>
-      <div class='form-group'>
-        <button class='btn btn-primary' type='submit'>login</button>
-      </div>
-    </form>
-  </div>
-  <div class='login-card'>
-    <h2 class='page-title'>Create an account</h2>
-    <form class='form signup-form'>
-      <div class='form-group'>
-        <label for='username-signup'>Username:</label>
-        <input class='form-input' type='text' id='username-signup' />
-      </div>
-      <div class='form-group'>
-        <label for='email-signup'>Email:</label>
-        <input class='form-input' type='text' id='email-signup' />
-      </div>
-      <div class='form-group'>
-        <label for='password-signup'>Password:</label>
-        <input class='form-input' type='password' id='password-signup' />
-      </div>
-      <div class='form-group'>
-        <button class='btn btn-primary' type='submit'>signup</button>
-      </div>
-    </form>
-  </div>
-</div>
+    </div>
 
-<script src='../public/js/login.js'></script>
+    <script src="../public/js/login.js"></script>
+</section>
+
