login bug solution

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,7 @@
         <div class="column">
           <div class="box">
             <h2 class="title">Sign in</h2>
-            <form>
+            <form class="login-form">
               <div class="field">
                 <label class="label" for="email-login">Email:</label>
                 <div class="control">
@@ -28,7 +28,7 @@
         <div class="column">
           <div class="box">
             <h2 class="title">Create an account</h2>
-            <form>
+            <form class="signup-form">
               <div class="field">
                 <label class="label" for="username-signup">Username:</label>
                 <div class="control">
@@ -60,4 +60,3 @@
 
     <script src="../public/js/login.js"></script>
 </section>
-
